--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+article > header {
+  padding: 3em 0 0 3em;
+}
+
+.article-content {
+  margin: 2em 4em;
+}
