Added basic styles, still pretty basic
- added very basic header
- very basic 'about' page
- added a basic 'recent posts'
- initial color ideas
- working on template

TODO:

- Better readme with instructons
- Better layout and style
- functional sidebar
- sticky header
- footer

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,3 +1,9 @@
 .mainContent {
-  background-color: #EEE;
+  background-color: #f0b669;
+  display: flex;
+  justify-items: center;
+  margin: 4rem 0.5rem;
+  border-radius: 4rem;
+  padding-bottom: 2rem;
+  max-width: 42rem;
 }
