--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,6 @@
 .mainContent {
-  background-color: #f0b669;
+  background-color: #aabd75;
   display: flex;
-  justify-items: center;
   margin: 4rem 0.5rem;
   border-radius: 4rem;
   padding-bottom: 2rem;
