--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,13 +54,14 @@ article > header {
   text-align: justify;
   font-size: 20px;
   line-height: 110%;
-  margin: 2em auto;
-  max-width: 38em;
+  margin: 1rem auto;
+  max-width: 38rem;
 }
 
 ul {
   /*   margin: 0; */
   list-style-type: none;
+  padding-inline-start: 0;
 }
 ul > li {
   display: flex;
