--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,8 +4,8 @@
 
 .main {
   min-height: 100vh;
-  padding: 0 5rem;
   flex: 1;
+  padding: 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
